# Generation-of-software-project-version-release-logs

./: .gitignore  README.md
cpp_release_note_mvp/: .gitignore  README.md  pyproject.toml
cpp_release_note_mvp/benchmark/: openharmony_cpp_benchmark.json
cpp_release_note_mvp/configs/: pipeline.example.json  third_party_sqlite_head_to_master_smoke.json  third_party_sqlite_v5_0_1_to_v5_0_2.json  third_party_sqlite_v6_0_to_v6_0_0_1.json  third_party_sqlite_v6_0_to_v6_0_0_1_deepseek.json  third_party_sqlite_v6_0_to_v6_0_0_1_openai.json
cpp_release_note_mvp/configs/benchmark/: third_party_curl_v6_0_to_v6_0_0_1.json  third_party_libpng_v6_0_to_v6_0_0_1.json  third_party_libxml2_v6_0_0_1_to_v6_0_0_2.json  third_party_mbedtls_v6_0_0_1_to_v6_0_0_2.json  third_party_zlib_v6_0_0_1_to_v6_0_0_2.json
cpp_release_note_mvp/docs/: benchmark_expansion_plan.md
cpp_release_note_mvp/prompts/: release_note_system_prompt.md
cpp_release_note_mvp/src/cpp_release_note_mvp/: __init__.py  cli.py  config.py  models.py
cpp_release_note_mvp/src/cpp_release_note_mvp/pipeline/: __init__.py  change_detection.py  cmg_builder.py  cpp_symbol_extractor.py  enre_parser.py  enre_runner.py  git_utils.py  prompt_builder.py  release_note_generation.py  version_snapshot.py
cpp_release_note_mvp/src/cpp_release_note_mvp/schemas/: changed_functions_schema.md  enre_normalized_graph_schema.md  prompt_input_schema.md  release_note_output_schema.md
