[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cpp-release-note-mvp"
version = "0.1.0"
description = "MVP for automated release note generation on C/C++ repositories"
requires-python = ">=3.10"
dependencies = [
  "tree-sitter>=0.25.2",
  "tree-sitter-cpp>=0.23.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
